JSW Devsb/src/objects/Zonal_Head__c.object
<CustomObject>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual</label>
        <summarizedField>ASM_Targets__c.Actual__c</summarizedField>
        <summaryForeignKey>ASM_Targets__c.Zonal_Head__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Head__c</fullName>
        <label>State Head</label>
        <referenceTo>State_Head__c</referenceTo>
        <relationshipName>Zonal_Head</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Target__c</fullName>
        <label>Target</label>
        <summarizedField>ASM_Targets__c.Target__c</summarizedField>
        <summaryForeignKey>ASM_Targets__c.Zonal_Head__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>State Head</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SH-{00000}</displayFormat>
        <label>State Head Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>State Head</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>